--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,4 @@
-(executable
- (public_name advent_of_code_2023)
- (name main)
+(executables
+ (public_names day01 day02)
+ (names day01 day02)
  (libraries advent_of_code_2023 re core))
