--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,4 @@
 (executables
- (public_names day01 day02 day03 day04 day05 day06 day07 day08 day09)
- (names day01 day02 day03 day04 day05 day06 day07 day08 day09)
+ (public_names day01 day02 day03 day04 day05 day06 day07 day08 day09 day16)
+ (names day01 day02 day03 day04 day05 day06 day07 day08 day09 day16)
  (libraries advent_of_code_2023 re core))
